--- a/time-app/src/app/employees/employee-list/employee-list.component.html
+++ b/time-app/src/app/employees/employee-list/employee-list.component.html
@@ -1,1 +1,49 @@
-<p>employee-list works!</p>
+<div style="padding: 50px;">
+  
+	<h1>Employees</h1>
+
+	<mat-form-field>
+		<mat-label>Filter</mat-label>
+		<input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
+	</mat-form-field>
+
+	<a style="float: right;" routerLink="/employees/add">
+		<button mat-raised-button color="primary">Add Employee</button>
+	</a>
+
+	<table mat-table [dataSource]="dataSource">
+
+		<!-- Position Column -->
+		<ng-container matColumnDef="position">
+		<th mat-header-cell *matHeaderCellDef> No. </th>
+		<td mat-cell *matCellDef="let element"> {{element.position}} </td>
+		</ng-container>
+
+		<!-- Name Column -->
+		<ng-container matColumnDef="name">
+		<th mat-header-cell *matHeaderCellDef> Name </th>
+		<td mat-cell *matCellDef="let element"> {{element.name}} </td>
+		</ng-container>
+
+		<!-- Weight Column -->
+		<ng-container matColumnDef="weight">
+		<th mat-header-cell *matHeaderCellDef> Weight </th>
+		<td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+		</ng-container>
+
+		<!-- Symbol Column -->
+		<ng-container matColumnDef="symbol">
+		<th mat-header-cell *matHeaderCellDef> Symbol </th>
+		<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+		</ng-container>
+
+		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+	</table>
+
+	<!-- <mat-paginator [length]="100"
+              [pageSize]="10"
+              [pageSizeOptions]="[5, 10, 25, 100]">
+	</mat-paginator> -->
+
+</div>
