--- a/time-app/src/app/employees/employee-add/employee-add.component.html
+++ b/time-app/src/app/employees/employee-add/employee-add.component.html
@@ -1,1 +1,30 @@
-<p>employee-add works!</p>
+<div style="padding: 50px;">
+
+    <a routerLink='/employees'>Back to list</a>
+
+    <h1>Add Employee</h1>
+
+    <mat-list>
+
+        <mat-list-item>
+            <mat-form-field appearance="standard">
+                <mat-label>First name</mat-label>
+                <input matInput>
+              </mat-form-field>
+        </mat-list-item>
+
+        <mat-list-item>
+            <mat-form-field appearance="standard">
+                <mat-label>Last name</mat-label>
+                <input matInput>
+              </mat-form-field>
+        </mat-list-item>
+
+        <mat-list-item>
+            <button mat-raised-button color="primary">Add</button>
+        </mat-list-item>
+
+    </mat-list>
+
+</div>
+  
