--- a/time-app/src/app/settings/token-settings/token-settings.component.html
+++ b/time-app/src/app/settings/token-settings/token-settings.component.html
@@ -1,1 +1,21 @@
-<p>token-settings works!</p>
+<div style="padding: 50px;">
+
+    <h1>Token Settings</h1>
+
+    <mat-list>
+
+        <mat-list-item>
+            <mat-form-field appearance="standard" style="width: 20%;">
+                <mat-label>Token</mat-label>
+                <input matInput>
+              </mat-form-field>
+        </mat-list-item>
+
+        <mat-list-item>
+            <button mat-raised-button color="primary">Save</button>
+        </mat-list-item>
+
+    </mat-list>
+
+</div>
+  
