--- a/time-app/src/app/settings/token-settings/token-settings.component.html
+++ b/time-app/src/app/settings/token-settings/token-settings.component.html
@@ -2,20 +2,22 @@
 
     <h1>Token Settings</h1>
 
-    <mat-list>
+    <form [formGroup]="form" (ngSubmit)="submitToken(form.value)">
+        <mat-list>
 
-        <mat-list-item>
-            <mat-form-field appearance="standard" style="width: 20%;">
-                <mat-label>Token</mat-label>
-                <input matInput>
-              </mat-form-field>
-        </mat-list-item>
-
-        <mat-list-item>
-            <button mat-raised-button color="primary">Save</button>
-        </mat-list-item>
-
-    </mat-list>
+            <mat-list-item>
+                <mat-form-field appearance="standard" style="width: 20%;">
+                    <mat-label>Token</mat-label>
+                    <input matInput formControlName="token" required minlength=10>
+                  </mat-form-field>
+            </mat-list-item>
+    
+            <mat-list-item>
+                <button mat-raised-button color="primary" type="submit">Save</button>
+            </mat-list-item>
+    
+        </mat-list>
+    </form>
 
 </div>
   
