--- a/time-app/src/app/employees/employee-list/employee-list.component.html
+++ b/time-app/src/app/employees/employee-list/employee-list.component.html
@@ -14,36 +14,49 @@
 	<table mat-table [dataSource]="dataSource">
 
 		<!-- Position Column -->
-		<ng-container matColumnDef="position">
-		<th mat-header-cell *matHeaderCellDef> No. </th>
-		<td mat-cell *matCellDef="let element"> {{element.position}} </td>
+		<ng-container matColumnDef="firstName">
+		<th mat-header-cell *matHeaderCellDef> First Name </th>
+		<td mat-cell *matCellDef="let employee"> {{employee.FirstName}} </td>
 		</ng-container>
 
 		<!-- Name Column -->
-		<ng-container matColumnDef="name">
-		<th mat-header-cell *matHeaderCellDef> Name </th>
-		<td mat-cell *matCellDef="let element"> {{element.name}} </td>
+		<ng-container matColumnDef="lastName">
+		<th mat-header-cell *matHeaderCellDef> Last Name </th>
+		<td mat-cell *matCellDef="let employee"> {{employee.LastName}} </td>
 		</ng-container>
 
-		<!-- Weight Column -->
-		<ng-container matColumnDef="weight">
-		<th mat-header-cell *matHeaderCellDef> Weight </th>
-		<td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+		<!-- Name Column -->
+		<ng-container matColumnDef="address">
+			<th mat-header-cell *matHeaderCellDef> Address </th>
+			<td mat-cell *matCellDef="let employee"> {{employee.Address}} </td>
 		</ng-container>
 
-		<!-- Symbol Column -->
-		<ng-container matColumnDef="symbol">
-		<th mat-header-cell *matHeaderCellDef> Symbol </th>
-		<td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+		<!-- Name Column -->
+		<ng-container matColumnDef="gender">
+			<th mat-header-cell *matHeaderCellDef> Gender </th>
+			<td mat-cell *matCellDef="let employee"> {{employee.Unit1}} </td>
 		</ng-container>
+
+		<!-- Name Column -->
+		<ng-container matColumnDef="type">
+			<th mat-header-cell *matHeaderCellDef> Employment Type </th>
+			<td mat-cell *matCellDef="let employee"> {{employee.Unit2}} </td>
+		</ng-container>
+
+		<!-- Name Column -->
+		<ng-container matColumnDef="location">
+			<th mat-header-cell *matHeaderCellDef> Location </th>
+			<td mat-cell *matCellDef="let employee"> {{employee.Unit3}} </td>
+		</ng-container>
+
 
 		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 	</table>
 
-	<!-- <mat-paginator [length]="100"
+	<mat-paginator [length]="100"
               [pageSize]="10"
               [pageSizeOptions]="[5, 10, 25, 100]">
-	</mat-paginator> -->
+	</mat-paginator>
 
 </div>
