--- a/time-app/src/app/employees/present-list/present-list.component.html
+++ b/time-app/src/app/employees/present-list/present-list.component.html
@@ -2,61 +2,11 @@
   
 	<h1>Present employees</h1>
 
-	<mat-form-field>
-		<mat-label>Filter</mat-label>
-		<input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
-	</mat-form-field>
-
 	<button mat-raised-button color="primary" style="float: right;">
 		<mat-icon>refresh</mat-icon>
 	</button>
 
-	<table mat-table [dataSource]="dataSource">
-
-		<!-- Position Column -->
-		<ng-container matColumnDef="firstName">
-		<th mat-header-cell *matHeaderCellDef> First Name </th>
-		<td mat-cell *matCellDef="let employee"> {{employee.FirstName}} </td>
-		</ng-container>
-
-		<!-- Name Column -->
-		<ng-container matColumnDef="lastName">
-		<th mat-header-cell *matHeaderCellDef> Last Name </th>
-		<td mat-cell *matCellDef="let employee"> {{employee.LastName}} </td>
-		</ng-container>
-
-		<!-- Name Column -->
-		<ng-container matColumnDef="address">
-			<th mat-header-cell *matHeaderCellDef> Address </th>
-			<td mat-cell *matCellDef="let employee"> {{employee.Address}} </td>
-		</ng-container>
-
-		<!-- Name Column -->
-		<ng-container matColumnDef="gender">
-			<th mat-header-cell *matHeaderCellDef> Gender </th>
-			<td mat-cell *matCellDef="let employee"> {{employee.Unit1}} </td>
-		</ng-container>
-
-		<!-- Name Column -->
-		<ng-container matColumnDef="type">
-			<th mat-header-cell *matHeaderCellDef> Employment Type </th>
-			<td mat-cell *matCellDef="let employee"> {{employee.Unit2}} </td>
-		</ng-container>
-
-		<!-- Name Column -->
-		<ng-container matColumnDef="location">
-			<th mat-header-cell *matHeaderCellDef> Location </th>
-			<td mat-cell *matCellDef="let employee"> {{employee.Unit3}} </td>
-		</ng-container>
-
-
-		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-	</table>
-
-	<mat-paginator [length]="100"
-              [pageSize]="10"
-              [pageSizeOptions]="[5, 10, 25, 100]">
-	</mat-paginator>
+	<app-shared-list [displayedColumns]="displayedColumns" [dataSource]="dataSource">
+	</app-shared-list>
 
 </div>
