feat: add presence refresh action

--- a/time-app/src/app/employees/present-list/present-list.component.html
+++ b/time-app/src/app/employees/present-list/present-list.component.html
@@ -2,7 +2,7 @@
   
 	<h1>Present employees</h1>
 
-	<button mat-raised-button color="primary" style="float: right;">
+	<button mat-raised-button color="primary" style="float: right;" (click)="refresh()">
 		<mat-icon>refresh</mat-icon>
 	</button>
 
