--- a/time-app/src/app/employees/employee-add/employee-add.component.html
+++ b/time-app/src/app/employees/employee-add/employee-add.component.html
@@ -3,28 +3,38 @@
     <a routerLink='/employees'>Back to list</a>
 
     <h1>Add Employee</h1>
+    <form [formGroup]="form" (ngSubmit)="addEmployee()">
 
-    <mat-list>
+        <mat-list>
 
-        <mat-list-item>
-            <mat-form-field appearance="standard">
-                <mat-label>First name</mat-label>
-                <input matInput>
-              </mat-form-field>
-        </mat-list-item>
+            <mat-list-item>
+                <mat-form-field appearance="standard">
+                    <mat-label>First name</mat-label>
+                    <input matInput formControlName="firstName" required>
+                </mat-form-field>
+            </mat-list-item>
 
-        <mat-list-item>
-            <mat-form-field appearance="standard">
-                <mat-label>Last name</mat-label>
-                <input matInput>
-              </mat-form-field>
-        </mat-list-item>
+            <mat-list-item>
+                <mat-form-field appearance="standard">
+                    <mat-label>Last name</mat-label>
+                    <input matInput formControlName="lastName" required>
+                </mat-form-field>
+            </mat-list-item>
 
-        <mat-list-item>
-            <button mat-raised-button color="primary">Add</button>
-        </mat-list-item>
+            <mat-list-item>
+                <mat-form-field appearance="standard">
+                    <mat-label>Email</mat-label>
+                    <input matInput formControlName="email" required>
+                </mat-form-field>
+            </mat-list-item>
 
-    </mat-list>
+            <mat-list-item>
+                <button mat-raised-button color="primary" type="submit">Add</button>
+            </mat-list-item>
+
+        </mat-list>
+
+    </form>
 
 </div>
   
