--- a/time-app/src/app/employees/present-list/present-list.component.html
+++ b/time-app/src/app/employees/present-list/present-list.component.html
@@ -9,4 +9,9 @@
 	<app-shared-list [displayedColumns]="displayedColumns" [dataSource]="dataSource">
 	</app-shared-list>
 
+	<mat-paginator [length]="10"
+          [pageSize]="10"
+          [pageSizeOptions]="[5, 10, 25, 100]">
+	</mat-paginator>
+
 </div>
