--- a/time-app/src/app/employees/shared/shared-list/shared-list.component.html
+++ b/time-app/src/app/employees/shared/shared-list/shared-list.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. John Smith">
 </mat-form-field>
 
 <!-- <a style="float: right;" routerLink="/employees/add">
@@ -45,12 +45,6 @@
         <td mat-cell *matCellDef="let employee"> {{employee.Unit3}} </td>
     </ng-container>
 
-
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-
-<mat-paginator [length]="100"
-          [pageSize]="10"
-          [pageSizeOptions]="[5, 10, 25, 100]">
-</mat-paginator>
