feat: create snackbar service

--- a/time-app/src/styles.css
+++ b/time-app/src/styles.css
@@ -2,3 +2,21 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.error-snackbar {
+    background-color: #B00020;
+    color: white;
+}
+
+.error-snackbar .mat-simple-snackbar-action  {
+    color: white;
+}
+
+.success-snackbar {
+    background-color: #4caf50;
+    color: black;
+}
+
+.success-snackbar .mat-simple-snackbar-action  {
+    color: black;
+}
