--- a/time-app/src/app/settings/token-settings/token-settings.component.html
+++ b/time-app/src/app/settings/token-settings/token-settings.component.html
@@ -8,7 +8,7 @@
             <mat-list-item>
                 <mat-form-field appearance="standard" style="width: 20%;">
                     <mat-label>Token</mat-label>
-                    <input matInput formControlName="token" required minlength=10>
+                    <input matInput formControlName="token" required>
                   </mat-form-field>
             </mat-list-item>
     
