fix: import modules into tests to pass them

--- a/time-app/src/app/app.component.html
+++ b/time-app/src/app/app.component.html
@@ -6,7 +6,7 @@
 					<div>
 						<mat-icon aria-hidden="false" aria-label="Example home icon" >schedule</mat-icon><br>
 					</div>
-					<div>TimeApp</div>
+					<div id="title">{{title}}</div>
 					<div class="underline"></div>
 				</div>
 			</a>
