--- a/time-app/src/app/app.component.html
+++ b/time-app/src/app/app.component.html
@@ -7,28 +7,28 @@
 						<mat-icon aria-hidden="false" aria-label="Example home icon" >schedule</mat-icon><br>
 					</div>
 					<div id="title">{{title}}</div>
-					<div class="underline"></div>
+					<div class="underline accent-color"></div>
 				</div>
 			</a>
 			<a routerLink="/employees">
 				<mat-list-item>
 					<mat-icon aria-hidden="false" aria-label="Example home icon">perm_contact_calendar</mat-icon>
 					<div class="separator"></div>
-					<div class="item-text">Employees</div>
+					<div>Employees</div>
 				</mat-list-item>
 			</a>
 			<a routerLink="/employees/present">
 				<mat-list-item>
-					<mat-icon aria-hidden="false" aria-label="Example home icon">where_to_vote</mat-icon>
+					<mat-icon aria-hidden="false" aria-label="Example home icon">beenhere</mat-icon>
 					<div class="separator"></div>
-					<div class="item-text">Presence</div>
+					<div>Presence</div>
 				</mat-list-item>
 			</a>
 			<a routerLink="/settings">
 				<mat-list-item>
 					<mat-icon aria-hidden="false" aria-label="Example home icon">settings</mat-icon>
 					<div class="separator"></div>
-					<div class="item-text">Settings</div>
+					<div>Settings</div>
 				</mat-list-item>
 			</a>
      	</mat-list>
