--- a/time-app/src/app/employees/employee-list/employee-list.component.html
+++ b/time-app/src/app/employees/employee-list/employee-list.component.html
@@ -3,7 +3,7 @@
 	<h1>Employees</h1>
 
 	<a style="float: right;" routerLink="/employees/add">
-		<button mat-raised-button color="primary">Add Employee</button>
+		<button mat-raised-button class="accent-color">Add Employee</button>
 	</a>
 
 	<app-shared-list [displayedColumns]="displayedColumns" [dataSource]="dataSource">
