--- a/time-app/src/app/settings/token-settings/token-settings.component.html
+++ b/time-app/src/app/settings/token-settings/token-settings.component.html
@@ -13,7 +13,7 @@
             </mat-list-item>
     
             <mat-list-item>
-                <button mat-raised-button color="primary" type="submit">Save</button>
+                <button mat-raised-button class="accent-color" type="submit">Save</button>
             </mat-list-item>
     
         </mat-list>
