--- a/time-app/src/app/app.component.css
+++ b/time-app/src/app/app.component.css
@@ -7,7 +7,7 @@ mat-drawer * {
 }
 
 mat-icon {
-    color: white !important;
+    color: white;
 }
 
 #logo {
@@ -18,7 +18,6 @@ mat-icon {
 }
 
 .underline {
-    background-color: #3f51b5;
     height: 3px;
     width: 70%;
     border-radius: 5px;
@@ -31,6 +30,7 @@ mat-icon {
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 h1 {
